--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,8 @@
     "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.5",
     "prettier": "^3.6.2",
-    "vue-eslint-parser": "^10.2.0"
+    "typescript": "^5.8.3",
+    "vue-eslint-parser": "^10.2.0",
+    "vue-tsc": "^2.2.10"
   }
 }
