Theme update, timing system api, race slugs

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,5 +2,10 @@
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_ANON_KEY=your-anon-key-here
 
+# Timing System API Key
+# Generate a strong random key for your race timing hardware
+# Example: openssl rand -base64 32
+TIMING_API_KEY=your_secure_timing_api_key_here
+
 # Add other environment variables as needed
 # NUXT_SECRET_KEY=your-secret-key
