--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@nuxtjs/supabase": "^1.4.0",
     "@nuxtjs/tailwindcss": "6.12.1",
     "@pinia/nuxt": "^0.11.0",
     "@primevue/forms": "^4.3.4",
@@ -22,6 +23,8 @@
     "@supabase/supabase-js": "^2.49.8",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/jsonwebtoken": "^9.0.10",
+    "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.17.4",
     "pinia": "^3.0.2",
     "primeicons": "^7.0.0",
