--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,12 +23,16 @@
     "@supabase/supabase-js": "^2.49.8",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@tiptap/extension-link": "^3.2.0",
+    "@tiptap/starter-kit": "^3.2.0",
+    "@tiptap/vue-3": "^3.2.0",
     "@types/jsonwebtoken": "^9.0.10",
     "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.17.4",
     "pinia": "^3.0.2",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.4",
+    "swiper": "^11.2.10",
     "tailwindcss": "3.4.15",
     "vue": "^3.5.15",
     "vue-router": "^4.5.1"
